// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render with all paddings 1`] = `
.circuit-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-bottom: 1px solid #D8DDE1;
  padding: 12px;
}

.circuit-0:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.circuit-0:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

@media (hover:hover) {
  .circuit-0:hover {
    outline: none;
  }

  .circuit-0:hover::after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 0px 2px #3388FF;
    border-radius: 4px;
  }
}

.circuit-0:focus {
  outline: none;
}

.circuit-0:focus::after {
  content: ' ';
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  box-shadow: 0px 0px 0px 2px #3388FF;
  border-radius: 4px;
}

<div
  className="circuit-0 circuit-1"
  onKeyDown={null}
  selected={false}
  tabIndex={0}
>
  List item
</div>
`;

exports[`Item should render with all paddings 2`] = `
.circuit-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-bottom: 1px solid #D8DDE1;
  padding: 16px;
}

.circuit-0:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.circuit-0:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

@media (hover:hover) {
  .circuit-0:hover {
    outline: none;
  }

  .circuit-0:hover::after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 0px 2px #3388FF;
    border-radius: 4px;
  }
}

.circuit-0:focus {
  outline: none;
}

.circuit-0:focus::after {
  content: ' ';
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  box-shadow: 0px 0px 0px 2px #3388FF;
  border-radius: 4px;
}

<div
  className="circuit-0 circuit-1"
  onKeyDown={null}
  selected={false}
  tabIndex={0}
>
  List item
</div>
`;

exports[`Item should render with all paddings 3`] = `
.circuit-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
}

.circuit-0:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.circuit-0:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

@media (hover:hover) {
  .circuit-0:hover {
    outline: none;
  }

  .circuit-0:hover::after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 0px 2px #3388FF;
    border-radius: 4px;
  }
}

.circuit-0:focus {
  outline: none;
}

.circuit-0:focus::after {
  content: ' ';
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  box-shadow: 0px 0px 0px 2px #3388FF;
  border-radius: 4px;
}

<div
  className="circuit-0 circuit-1"
  onKeyDown={null}
  selected={false}
  tabIndex={0}
>
  List item
</div>
`;

exports[`Item should render with default styles 1`] = `
.circuit-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
}

.circuit-0:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.circuit-0:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

@media (hover:hover) {
  .circuit-0:hover {
    outline: none;
  }

  .circuit-0:hover::after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 0px 2px #3388FF;
    border-radius: 4px;
  }
}

.circuit-0:focus {
  outline: none;
}

.circuit-0:focus::after {
  content: ' ';
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  box-shadow: 0px 0px 0px 2px #3388FF;
  border-radius: 4px;
}

<div
  className="circuit-0 circuit-1"
  onKeyDown={null}
  selected={false}
  tabIndex={0}
>
  List item
</div>
`;

exports[`Item should render with selected styles 1`] = `
.circuit-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
}

.circuit-0:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.circuit-0:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

@media (hover:hover) {
  .circuit-0:hover {
    outline: none;
  }

  .circuit-0:hover::after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 0px 2px #3388FF;
    border-radius: 4px;
  }
}

.circuit-0:focus {
  outline: none;
}

.circuit-0:focus::after {
  content: ' ';
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  box-shadow: 0px 0px 0px 2px #3388FF;
  border-radius: 4px;
}

<div
  class="circuit-0 circuit-1"
  tabindex="0"
>
  List item
</div>
`;
